--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,8 @@
           <div class="text-des">
             <div class="icon-wrapper"><i class="fa fa-paper-plane"></i></div>
             <div class="service-wrapper">
-              <h3>World-Wide Shipping</h3>
-              <p>On order over $99</p>
+              <h3>Giao hàng toàn quốc</h3>
+              <p>Nhanh chóng tiện lợi</p>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
             <div class="icon-wrapper"><i class="fa fa-umbrella"></i></div>
             <div class="service-wrapper">
               <h3>Support 24/7</h3>
-              <p>Call us: ( +123 ) 456 789</p>
+              <p>Gọi ngay:  0978.691.194</p>
             </div>
           </div>
         </div>
@@ -39,8 +39,8 @@
           <div class="text-des">
             <div class="icon-wrapper"><i class="fa fa-tags"></i></div>
             <div class="service-wrapper">
-              <h3>Member Discount</h3>
-              <p>25% on order over $199</p>
+              <h3>Giảm giá</h3>
+              <p>Với nhiều ưu đãi hấp dẫn</p>
             </div>
           </div>
         </div>
