--- a/src/app/product-compare/product-compare.component.html
+++ b/src/app/product-compare/product-compare.component.html
@@ -145,7 +145,7 @@
               <div class="icon-wrapper"><i class="fa fa-umbrella"></i></div>
               <div class="service-wrapper">
                 <h3>Support 24/7</h3>
-                <p>Call us: ( +123 ) 456 789</p>
+                <p>Gọi ngay:  0978.691.194</p>
               </div>
             </div>
           </div>
@@ -155,8 +155,8 @@
             <div class="text-des">
               <div class="icon-wrapper"><i class="fa fa-tags"></i></div>
               <div class="service-wrapper">
-                <h3>Member Discount</h3>
-                <p>25% on order over $199</p>
+                <h3>Giảm giá</h3>
+                <p>Với nhiều ưu đãi hấp dẫn</p>
               </div>
             </div>
           </div>
