--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,16 +71,16 @@
     background-color: #ebf9ea;
 }
 .single-categories.bg2:before {
-    background-color: #fff8e5;
+    background-color: #d8c285;
 }
 .single-categories.bg3:before {
-    background-color: #ebf1f5;
+    background-color: #61859c;
 }
 .single-categories.bg4:before {
     background-color: #eff5ff;
 }
 .single-categories.bg5:before {
-    background-color: #ebf9ea;
+    background-color: #93bd90;
 }
 .single-categories.bg6:before {
     background-color: #fff3ef;
