--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -467,7 +467,7 @@
       <div class="featured-pro">
         <div class="slider-items-products">
           <div  class="product-flexslider hidden-buttons">
-            <!-- <app-product-recent></app-product-recent> -->
+            <app-product-recent></app-product-recent>
           </div>
         </div>
       </div>
