--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -388,12 +388,12 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="page-header">
-            <h2>UpSell Products</h2>
+            <h2>SẢN PHẨM VỪA XEM</h2>
           </div>
           <div class="slider-items-products">
             <div id="upsell-product-slider" class="product-flexslider hidden-buttons">
               <div class="slider-items slider-width-col4">
-                 <!-- <app-product-recent></app-product-recent> -->
+                 <app-product-recent></app-product-recent>
               </div>
             </div>
           </div>
