--- a/src/app/product-recent/product-recent.component.css
+++ b/src/app/product-recent/product-recent.component.css
@@ -1,97 +1,27 @@
-.block-filter {
-    background: #f0f3fc;
-    margin-bottom: 10px;
-}
-
-.block-filter .filter-header {
-    font-weight: 400;
-    font-size: 13px;
-    color: #413939;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    padding: 14px;
-
-    padding: 14px 15px;
-    background-color: #f0f3fc;
-    /* text-transform: uppercase; */
-    letter-spacing: 0.5px;
-}
-.block-filter .filter-header a {
-    font-size: 18px;
-    font-weight: bold;
-    color: blue;
-}
-.block-filter .filter-header i {
-    color: blue;
-}
-.block-filter .filter-body {
-    padding: 0 16px;
-    max-height: 450px;
-    overflow: auto;
-}
-.filter-body-inner {
-    padding: 16px 0;
-    border-top: 1px solid #dddfe6;
-}
-.filter-body-inner .filter-item {
-    margin-bottom: 8px;
-}
-
-.block-filter .active {
-    display: inherit;
-}
-
-.block-filter .noactive {
-    display: none;
-}
-
-.checkmark {
-    height: 24px;
-    width: 24px;
-    background-color: #fff;
-    border: 1px solid #b3b8c2;
-    box-sizing: border-box;
+.flex-viewport{
+    overflow: hidden;
     position: relative;
+}
+
+.table tr td.att-name {
+    width: 255px;
+    height: 46px;
+    background: #f0f3fc;
+}
+
+.table tr td {
+    border: 1px solid #dddfe6;
     vertical-align: middle;
-    display: table-cell;
-    margin-top: 4px !important;
-    margin-bottom: 3px !important;
+    text-indent: 17px;
 }
-.block-content{
-    font-size: 14px !important;
-    color: red;
+.product-item{
+    max-width: 178.5px; 
+    max-height: 258px;
 }
-.filter-item li > label {
-    display: flex;
-    align-items: center;
-    font-size: 16px;
-    color: #1a2948;
-    cursor: pointer;
-    flex-direction: row;
+.container{
+    margin-bottom: 30px;
 }
-
-.sp {
-    color: #203140;
-    font-size: 12px;
-    line-height: 21px;
-    margin-top: 6px;
-    margin-bottom: 6px;
-    width: 100%;
-    margin-left: 8px;
-}
-
-.inputPrice {
-    display: inline-flex;
-    justify-content: space-between;
-}
-
-.inputPrice input {
-    width: calc(50% - 6.5px);
-    border: none;
-    padding: 10px;
-    box-sizing: border-box;
-    margin-left: 5px;
-    margin-right: 5px;
+.owl-item {
+    width: 0px !important; 
+    margin-right: 0px !important;
 }
