--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -216,10 +216,7 @@
       </div>
     </div>
   </div>
-  <br>
-  <br>
-
-  <div class="container">
+  <div class="container newproduct">
     <div class="home-tab">
       <div class="tab-title text-left">
         <h2>SẢN PHẨM MỚI</h2>
@@ -307,9 +304,6 @@
       </div>
     </div>
   </div>
-  <br>
-  <br>
-
   <!-- <div class="banner-section">
     <div class="container">
       <div class="row">
@@ -322,7 +316,7 @@
       </div>
     </div>
   </div> -->
-  <div class="container">
+  <div class="container newproduct">
     <div class="home-tab">
       <div class="tab-title text-left">
         <h2>SẢN PHẨM NỔI BẬT</h2>
@@ -404,9 +398,7 @@
       </div>
     </div>
   </div>
-  <br>
-
-  <div class="container">
+  <div class="container newproduct">
     <div class="home-tab">
     <div class="tab-title text-left">
       <h2>DANH MỤC SẢN PHẨM</h2>
@@ -427,8 +419,6 @@
       </ng-container>
     </div>
   </div>
-
-
   <div class="container">
     <div class="home-tab">
     <div class="tab-title text-left">
