--- a/src/app/quick-view/quick-view.component.html
+++ b/src/app/quick-view/quick-view.component.html
@@ -2,7 +2,8 @@
 <div style="display: block;" id="quick_view_popup-wrap" (click)="handleClickCloseModal($event)">
   <div id="quick_view_popup-outer">
     <div id="quick_view_popup-content">
-      <div style="width:auto;height:auto;overflow: auto;position:relative;">
+      <!-- style="width:auto;height:auto;overflow: auto;position:relative;" -->
+      <div class="center-modal">
         <div class="product-view-area">
           <div class="product-big-image col-xs-12 col-sm-5 col-lg-5 col-md-5">
             <div class="icon-sale-label sale-left">Sale</div>
