--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,13 +30,13 @@
         <div class="col-md-3 top-banner hidden-sm">
           <div class="jtv-banner3">
             <div class="jtv-banner3-inner">
-              <a href="#"><img [src]="pathBanner" alt="HTML template"></a>
+              <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}"><img src="../../assets/images/banner_quangcao_uudai.jpg" alt="HTML template" style="max-height: 338px;height: 338px;"></a>
               <div class="hover_content">
                 <div class="hover_data">
-                  <div class="title"> Ưu đãi to </div>
+                  <!-- <div class="title"> Ưu đãi to </div>
                   <div class="desc-text">Up to 55% off</div>
-                  <span>Màn hình, Laptop</span>
-                  <p><a href="#" class="shop-now">Mua ngay !</a></p>
+                  <span>Màn hình, Laptop</span> -->
+                  <!-- <p><a href="#" class="shop-now">Mua ngay !</a></p> -->
                 </div>
               </div>
             </div>
@@ -76,8 +76,8 @@
                               <div class="pr-button">
                                 <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
-                                <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
-                                      class="fa fa-link"></i> </a> </div>
+                                <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
+                                      class="fa fa-link"></i> </a> </div> -->
                                 <div class="mt-button quick-view"> <a (click)="openModalQuickView()"> <i
                                       class="fa fa-search"></i> </a> </div>
                               </div>
@@ -161,8 +161,8 @@
                               <div class="pr-button">
                                 <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
-                                <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
-                                      class="fa fa-link"></i> </a> </div>
+                                <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
+                                      class="fa fa-link"></i> </a> </div> -->
                                 <div class="mt-button quick-view"> <a routerLink="/xem-nhanh"> <i
                                       class="fa fa-search"></i> </a> </div>
                               </div>
@@ -252,8 +252,8 @@
                               <div class="pr-button">
                                 <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
-                                <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
-                                      class="fa fa-link"></i> </a> </div>
+                                <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
+                                      class="fa fa-link"></i> </a> </div> -->
                                 <div class="mt-button quick-view"> <a routerLink="/xem-nhanh"> <i
                                       class="fa fa-search"></i> </a> </div>
                               </div>
@@ -349,8 +349,8 @@
                               <div class="pr-button">
                                 <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
-                                <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
-                                      class="fa fa-link"></i> </a> </div>
+                                <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
+                                      class="fa fa-link"></i> </a> </div> -->
                                 <div class="mt-button quick-view"> <a routerLink="/xem-nhanh"> <i
                                       class="fa fa-search"></i> </a> </div>
                               </div>
