--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -128,7 +128,7 @@
                               </ng-container>
                             </div>
                             <div class="pro-action">
-                              <button type="button" class="add-to-cart"><span> Thêm giỏ hàng</span> </button>
+                              <button type="button" (click)="addToShopingCard(item)" class="add-to-cart"><span><i class="fa fa-shopping-cart"></i>&nbsp;Giỏ hàng</span> </button>
                             </div>
                           </div>
                         </div>
