--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -23,8 +23,8 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let item of itemsCart">
-                      <td class="cart_product"><a [routerLink]="['/chi-tiet']" (click)="handleViewDetailProduct($event,item)"><img [src]="urlImg + item.image" alt="Product"></a></td>
-                      <td class="cart_description"><p class="product-name"><a href="#">{{item.productName}}</a></p>
+                      <td class="cart_product"><a (click)="handleViewDetailProduct($event,item)"><img [src]="urlImg + item.image" alt="Product"></a></td>
+                      <td class="cart_description"><p class="product-name"><a (click)="handleViewDetailProduct($event,item)">{{item.productName}}</a></p>
                         <!-- <small><a href="#">Color : Red</a></small>
                         <small><a href="#">Size : M</a></small></td> -->
                       <td class="availability in-stock"><span class="label">In stock</span></td>
